--- a/src/app/modules/inventory/pages/vendor-list/vendor-list.component.html
+++ b/src/app/modules/inventory/pages/vendor-list/vendor-list.component.html
@@ -30,62 +30,39 @@
             </div>
           </div>
         </div>
-        <!-- <div class="column">
-          <div class="columns is-mobile is-multiline">
-            <div class="column">
-              <div class="field" style="min-width:200px;">
-                <p class="control has-icons-left">
-                  <input class="input is-small is-rounded" placeholder="Search Vendors">
-                  <span class="icon is-small is-left">
-                    <fa-icon icon="search"></fa-icon>
-                  </span>
-                </p>
-              </div>
-            </div>
-            <div class="column is-narrow">
-              <a class="button is-small is-rounded">
-                Search
-              </a>
-            </div>
-            <div class="column is-narrow">
-              <a class="button is-small is-rounded" (click)="popup_add_vendor=true">
-                Add Ingredient
-              </a>
-            </div>
-          </div>
-        </div> -->
       </div>
     </div>
 
+    <loading-container [loadable]="(vendor$ | async)">
+      <table class="table is-hoverable is-fullwidth">
+        <thead>
+          <tr>
+            <th>Title</th>
+            <th class="is-hidden-mobile">Mobile</th>
+            <th class="is-hidden-mobile">Email</th>
+            <th>Credit</th>
+            <th class="is-hidden-mobile">Address</th>
+            <th>Inventory Items</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let item of (vendor$ | async).vendors">
+            <td>{{item.title}}</td>
+            <td class="is-hidden-mobile">{{item.mobile}}</td>
+            <td class="is-hidden-mobile">{{item.email}}</td>
+            <td><progress class="progress is-primary" [value]="item.credit" max="100"></progress></td>
+            <td class="is-hidden-mobile">{{item.address}}</td>
+            <td>
+              <a class="button is-rounded is-small" (click)="popup_vendor_list=true">
+                <fa-icon icon="list"></fa-icon>
+              </a>
+            </td>
+          </tr>
 
-    <table class="table is-hoverable is-fullwidth">
-      <thead>
-        <tr>
-          <th>Title</th>
-          <th class="is-hidden-mobile">Mobile</th>
-          <th class="is-hidden-mobile">Email</th>
-          <th>Credit</th>
-          <th class="is-hidden-mobile">Address</th>
-          <th>Inventory Items</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let item of vendor_list">
-          <td>{{item.title}}</td>
-          <td class="is-hidden-mobile">{{item.mobile}}</td>
-          <td class="is-hidden-mobile">{{item.email}}</td>
-          <td><progress class="progress is-danger" [value]="item.credit" max="100"></progress></td>
-          <td class="is-hidden-mobile">{{item.address}}</td>
-          <td>
-            <a class="button is-rounded is-small" (click)="popup_vendor_list=true">
-              <fa-icon icon="list"></fa-icon>
-            </a>
-          </td>
-        </tr>
 
-
-      </tbody>
-    </table>
+        </tbody>
+      </table>
+    </loading-container>
 
     <nav class="pagination is-rounded is-small" role="navigation" aria-label="pagination">
       <a class="pagination-previous">Previous</a>
@@ -247,14 +224,14 @@
           </div>
 
           <div class="column field">
-              <label class="label">Expiry Date</label>
-              <p class="control has-icons-left" style="min-width: 200px;">
-                <input class="input is-rounded is-small" type="date">
-                <span class="icon is-small is-left">
-                  <fa-icon icon="calendar-alt"></fa-icon>
-                </span>
-              </p>
-            </div>
+            <label class="label">Expiry Date</label>
+            <p class="control has-icons-left" style="min-width: 200px;">
+              <input class="input is-rounded is-small" type="date">
+              <span class="icon is-small is-left">
+                <fa-icon icon="calendar-alt"></fa-icon>
+              </span>
+            </p>
+          </div>
 
 
         </div>
