--- a/src/app/modules/bills/pages/bills/bills.component.html
+++ b/src/app/modules/bills/pages/bills/bills.component.html
@@ -52,7 +52,7 @@
 
         <div class="box">
           <div class="content">
-
+            <loading-container [loadable]="(bill$ | async)">
             <table class="table is-hoverable is-fullwidth">
               <thead>
                 <tr>
@@ -64,59 +64,17 @@
                 </tr>
               </thead>
               <tbody>
-                <tr>
-                  <td>19321001</td>
-                  <td>Aarti Gond</td>
-                  <td>Unpaid</td>
-                  <td class="is-hidden-mobile">40</td>
-                  <td class="is-hidden-mobile">21 Mar 2019 16:22:00</td>
+                <tr *ngFor="let itm of (bill$ | async).bills">
+                  <td>{{itm.billno}}</td>
+                  <td>{{itm.custname}}</td>
+                  <td>{{itm.paymentstate}}</td>
+                  <td class="is-hidden-mobile">{{itm.ammount}}</td>
+                  <td class="is-hidden-mobile">{{itm.date | date}}</td>
                 </tr>
-                <tr>
-                  <td>19321002</td>
-                  <td>Shrikant Gond</td>
-                  <td>Paid</td>
-                  <td class="is-hidden-mobile">20</td>
-                  <td class="is-hidden-mobile">21 Mar 2019 16:24:00</td>
-                </tr>
-                <tr>
-                  <td>19321001</td>
-                  <td>Aarti Gond</td>
-                  <td>Unpaid</td>
-                  <td class="is-hidden-mobile">40</td>
-                  <td class="is-hidden-mobile">21 Mar 2019 16:22:00</td>
-                </tr>
-                <tr>
-                  <td>19321001</td>
-                  <td>Aarti Gond</td>
-                  <td>Unpaid</td>
-                  <td class="is-hidden-mobile">40</td>
-                  <td class="is-hidden-mobile">21 Mar 2019 16:22:00</td>
-                </tr>
-                <tr>
-                  <td>19321001</td>
-                  <td>Aarti Gond</td>
-                  <td>Unpaid</td>
-                  <td class="is-hidden-mobile">40</td>
-                  <td class="is-hidden-mobile">21 Mar 2019 16:22:00</td>
-                </tr>
-                <tr>
-                  <td>19321001</td>
-                  <td>Aarti Gond</td>
-                  <td>Unpaid</td>
-                  <td class="is-hidden-mobile">40</td>
-                  <td class="is-hidden-mobile">21 Mar 2019 16:22:00</td>
-                </tr>
-                <tr>
-                  <td>19321001</td>
-                  <td>Aarti Gond</td>
-                  <td>Unpaid</td>
-                  <td class="is-hidden-mobile">40</td>
-                  <td class="is-hidden-mobile">21 Mar 2019 16:22:00</td>
-                </tr>
-
+                
               </tbody>
             </table>
-
+</loading-container>
             <nav class="pagination is-rounded  is-small" role="navigation" aria-label="pagination">
               <a class="pagination-previous">Previous</a>
               <a class="pagination-next">Next page</a>
